# petasum-super-petasum

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMANDMENTS.md  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION_CHECKLIST.md  LIFECYCLE_ROADMAP.md  LOGIC_FRAMEWORK.md  PRINCIPLE_CONFLICTS.md  README.md  ecosystem.yaml  logic-rules.json  network-map.yaml  pyproject.toml  reproduce_bash_injection.sh  seed.yaml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: config.yml  organization-wide-issue.yml  process-improvement.yml
.github/workflows/: add-to-org-project.yml  ci.yml  cross-repo-notifications.yml  org-issue-notifications.yml
.jules/: bolt.md  palette.md  sentinel.md
docs/: NON-INTERACTIVE-AGENT-SAFETY.md  ai-free-practice-cadence.md  ai-gateway-architecture.md  ai-interaction-manifest.md  ai-interaction-model.md  content-provenance.md  copyright-case-law.md  data-classification.md  explore-vs-production-modes.md  legislation-tracking.md  output-safety-filters.md  platform-memory-lock-in.md  prompt-anti-patterns.md  prompt-template-library.md  promptfoo-evaluation.md  provider-policy-tracking.md  pseudonymization-guidelines.md  standards-alignment.md  writing-vault-protocol.md
docs/adr/: 001-initial-architecture.md  002-integration-patterns.md
docs/pitch/: index.html
src/: __init__.py  __main__.py  governance.py  report.py  tracker.py
tests/: test_audit.py  test_governance.py  test_tracker.py
